# perfume

./: LICENSE  README.md
Yeau/: CMakeLists.txt
Yeau/compte/: CMakeLists.txt  compte.cpp  compte.h  compteimpl.cpp  compteimpl.h  item.cpp  jx9util.cpp  jx9util.h  store.cpp  store.h  struct.h
Yeau/docs/: bld_design.sh  bld_first.sh  bld_yeau.sh  cmake_check_platform.txt  cordova_usage.md  couchdb.md  design.md  httpd-py-auth.conf  httpd_couchdb_rproxy.conf
Yeau/docs/jsons/: datestr.js  design_auth.js  design_bill.js  design_proj.js  design_user.js  yeau_design.js  yeau_design_ex.js
Yeau/misc/jx9eau/: CMakeLists.txt  jx9eau.cpp  jx9neon.c  jx9net.c  jx9net.h  jx9socket.c
Yeau/misc/libneon/: CMakeLists.txt  cmake_check.cmake  config.h  config.h.cmake.in
Yeau/misc/libuuid/: .uuid.h.swp  CMakeLists.txt  cmake_check.cmake  config.h.cmake.in  gen_uuid.c  uuid_time.c
Yeau/misc/unqlite/: CMakeLists.txt
Yeau/scripts/: getaccount.jx9  getdb.jx9  getdoc.jx9  jx9_cli.jx9  jx9_couchdb.js  jx9_getter.jx9  jx9_misc.jx9  jx9_putter.jx9  jx9_rsync.jx9  jx9_rsync1.jx9  jx9_svr.jx9  putaccount.jx9  putdb.jx9  putdoc.jx9  testJx9.js
Yeau/src/: CMakeLists.txt  eau_all.cpp  eau_all.h  eau_struct.h  ieau_api.h  ieau_impl.cpp  jx9_api.cpp  jx9_api.h
Yeau/testing/: CMakeLists.txt  testCurl.sh  testYeau.cpp
Yeau/ubase/: atomic.cpp  atomic.h  error.h  mutex.cpp  mutex.h  refcount.h  types.h  umisc.cpp  umisc.h  zeroptr.h
ashell/: AndroidManifest.xml
ashell/res/values/: strings.xml
ashell/src/org/uskee/android/ashell/: AppShell.java
rtcall/: README
rtcall/doubango/: run_cfg.sh
rtcall/hls/: cfg_vlc.sh  ffmpeg_ssnap.sh  help-vlc.txt  run_vlc_hls.sh  update_m3u8.py  vlc-live.txt
rtcall/librtc/: CMakeLists.txt  README.md  run_cfg.sh
rtcall/librtc/bld/linux/: Makefile
rtcall/librtc/docs/: usage.txt
rtcall/librtc/inc/: xrtc_api.h  xrtc_std.h
rtcall/librtc/scripts/: common.cmake  env_ninja.sh  ios.cmake  mac.cmake  unix.cmake  webrtc_mac.patch
rtcall/librtc/src/: CMakeLists.txt  mainx.cpp  media.cpp  observer.cpp  observer.h  peer.cpp  peer.h  sdp.cpp  stream.cpp  track.cpp  unittest.cpp  webrtc.h  xrtc_api.h  xrtc_std.h
rtcall/librtc/tests/: CMakeLists.txt  pclient.cpp  testrtc.cpp
rtcall/librtc/ubase/: error.h
rtcall/sip-js/: phone.js
rtcall/sipclient/: caller.css  caller.html  caller.js  sip.js
rtcall/webrtc2sip/: autogen.sh  run_cfg.sh
viewflow/: AndroidManifest.xml
viewflow/res/values/: attrs.xml
viewflow/src/org/taptwo/android/widget/: CircleFlowIndicator.java  ViewFlow.java
